packages/plugin-schema-macros/tests/ui/fail/bad_map_key.stderr
error: validation error: map key type `bool` is not allowed in interface `i`; map keys must be one of: string, uuid, integer primitives
 --> tests/ui/fail/bad_map_key.rs:1:1
  |
1 | / bmux_plugin_schema_macros::schema_inline!(
2 | |     r#"
3 | | plugin p version 1;
... |
8 | | "#
9 | | );
  | |_^
  |
  = note: this error originates in the macro `bmux_plugin_schema_macros::schema_inline` (in Nightly builds, run with -Z macro-backtrace for more info)
